--- a/beverages/elixir.html
+++ b/beverages/elixir.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <title>Head First Lounge Elixirs</title>
+    <link type="text/css" rel="stylesheet" href="../lounge.css">
   </head>
   <body>
     <h1>Our Elixirs</h1>
 
     <h2>Green Tea Cooler</h2>
-    <p>
+    <blockquote class="greentea">
       <img src="../images/green.jpg">
       Chock full of vitamins and minerals, this elixir
       combines the healthful benefits of green tea with
