--- a/lounge.html
+++ b/lounge.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <title>Head First Lounge</title>
+    <link type="text/css"rel="stylesheet"href="lounge.css">
   </head>
   <body>
-    <h1>Welcome to the New and Improved Head First Lounge</h1>
+    <h1>Welcome to the Head First Lounge</h1>
     <img src="images/drinks.gif">
     <p>
        Join us any evening for refreshing <a href="beverages/elixir.html">elixirs</a>,
